Fixed field modifier check